removed fav button, final edits

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <title>Safari Gifs</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- CSS Reset -->
         <link rel="stylesheet" href="./assets/css/reset.css">
+        <!-- CSS -->
         <link rel="stylesheet" href="./assets/css/style.css">
+        <!-- jQuery -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-        <!-- FireBase -->
-        <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
     </head>
     <body>
      <div id="wrapper">
